# sku-vision-pipeline

./: .gitattributes  .gitignore  LICENSE  README.md  download_base_weights.sh  download_gated_models.sh  pyproject.toml  requirements.txt
configs/: sources.yml  target_brands.yml
demo-ui/: index.html  package-lock.json  package.json  vercel.json
demo-ui/scripts/: run_inference.py  run_retrieval.py
demo-ui/src/: App.css  App.jsx  detections.js  index.css  retrieval_results.js
experiments/01_yolo_detection/: evaluate.py  prepare_data.py  train.py  verify_export.py
experiments/02_retrieval_system/: exp1_clip_retrieval.py  exp2_dinov2_retrieval.py  exp3_fewshot.py  exp4_text_query.py  generate_figures.py  indexer.py  match_skus.py  query.py
experiments/03_vlm_fewshot/: FINDINGS.md  IMPLEMENTATION_SUMMARY.md  README.md  convert_to_labelme.py  eval_vlm.py  eval_vlm_ollama.py  test_ollama.py  test_pipeline.py  visual_verification.py  vlm_annotation_pipeline.py  vlm_converter.py
experiments/curated_pipeline/: config.py  pipeline.py  review_server.py  yolo_to_labelme.py
experiments/shared/: analyze_bbox_quality.py  benchmark_vlm.py  build_image_registry.py  build_master_annotations.py  curation_helper.py  dataset_utils.py  detect_crop_index.py  (+13 more)
logic/: dinov3_wrapper.py
models/: SKU110K_V3.pt  recognition_resnet18.pt  recognition_vit.pt  yolov10n_148skus.pt  yolov10n_best.pt  yolov8n_148skus.pt  yolov8n_best.pt  yolov8n_curated_best.pt
scripts/: generate_failure_montage.py  generate_figures.py  generate_yolo_montage.py  populate_sku_catalogue.py
(+23 files in other folders)
